package com.coderpwh.design.strategy;

/**
 * @author coderpwh
 * @date 2023/9/15 14:49
 */
public class App {
}
