package com.coderpwh.design.strategy;

/**
 * @author coderpwh
 * @date 2023/9/15 15:14
 */
@FunctionalInterface
public interface DragonSlayingStrategy {


    /**
     * execute方法
     */
    void execute();
}
